{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 238,
  "lineage": "061fcdf6-790c-d6b1-daa8-0a270cb1098d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "us-east-1-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e369782a6d2125e",
            "arn": "arn:aws:ec2:us-east-1:349761350494:instance/i-0af840dc385d7adcb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af840dc385d7adcb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0346c453f64b7b8ff",
            "private_dns": "ip-10-1-1-87.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.87",
            "public_ip": "35.170.185.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0007cfd358eb7ee8b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8fd542ac3ac99f0",
            "tags": {
              "Name": "us-east-1-instance-1",
              "SecurityGroup": "instance-east-security-group"
            },
            "tags_all": {
              "Name": "us-east-1-instance-1",
              "SecurityGroup": "instance-east-security-group"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4cb030408e58dd3"
            ]
          },
          "dependencies": [
            "aws_security_group.us-east-1-instance-sg",
            "aws_subnet.us-east-1-subnet-1",
            "aws_vpc.us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "us-east-1-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e369782a6d2125e",
            "arn": "arn:aws:ec2:us-east-1:349761350494:instance/i-0c81e8d1c35180b62",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c81e8d1c35180b62",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ade6c500ec9cde57",
            "private_dns": "ip-10-1-2-152.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.152",
            "public_ip": "3.239.202.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f4c13aa0554257d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5006434f12ab81a",
            "tags": {
              "Name": "us-east-1-instance-2",
              "SecurityGroup": "instance-east-security-group"
            },
            "tags_all": {
              "Name": "us-east-1-instance-2",
              "SecurityGroup": "instance-east-security-group"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4cb030408e58dd3"
            ]
          },
          "dependencies": [
            "aws_security_group.us-east-1-instance-sg",
            "aws_subnet.us-east-1-subnet-2",
            "aws_vpc.us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "us-west-1-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f3f6663da6750955",
            "arn": "arn:aws:ec2:us-west-1:349761350494:instance/i-0ff9245aefa0cc1c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff9245aefa0cc1c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d4d0fd7c3612b6a9",
            "private_dns": "ip-10-0-1-239.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.239",
            "public_ip": "54.183.139.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-079ca1f047f6b1740",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0abc3ec32314d1f41",
            "tags": {
              "Name": "us-west-1-instance-1",
              "SecurityGroup": "instance-west-security-group"
            },
            "tags_all": {
              "Name": "us-west-1-instance-1",
              "SecurityGroup": "instance-west-security-group"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c50bd6752e97a00b"
            ]
          },
          "dependencies": [
            "aws_security_group.us-west-1-instance-sg",
            "aws_subnet.us-west-1-subnet-1",
            "aws_vpc.us-west-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "us-west-1-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f3f6663da6750955",
            "arn": "arn:aws:ec2:us-west-1:349761350494:instance/i-0cad268b6a52b5208",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cad268b6a52b5208",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05978279bb00376be",
            "private_dns": "ip-10-0-2-74.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.74",
            "public_ip": "54.67.94.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059bb7120b0ed7f1d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7c68ad12d2a648b",
            "tags": {
              "Name": "us-west-1-instance-2",
              "SecurityGroup": "instance-west-security-group"
            },
            "tags_all": {
              "Name": "us-west-1-instance-2",
              "SecurityGroup": "instance-west-security-group"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c50bd6752e97a00b"
            ]
          },
          "dependencies": [
            "aws_security_group.us-west-1-instance-sg",
            "aws_subnet.us-west-1-subnet-2",
            "aws_vpc.us-west-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-east-1-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349761350494:route-table/rtb-084e339de78854020",
            "id": "rtb-084e339de78854020",
            "owner_id": "349761350494",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065dddfbb64588639"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-west-1-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:349761350494:route-table/rtb-07c9c4ed12d42c96b",
            "id": "rtb-07c9c4ed12d42c96b",
            "owner_id": "349761350494",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-087c627d211c1faf6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.us-west-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1-subnet-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cf50c09827ce0f9",
            "route_table_id": "rtb-084e339de78854020",
            "subnet_id": "subnet-0b8fd542ac3ac99f0"
          },
          "dependencies": [
            "aws_route_table.us-east-1-route-table",
            "aws_subnet.us-east-1-subnet-1",
            "aws_vpc.us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1-subnet-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2aacaa0e7003102",
            "route_table_id": "rtb-084e339de78854020",
            "subnet_id": "subnet-0a5006434f12ab81a"
          },
          "dependencies": [
            "aws_route_table.us-east-1-route-table",
            "aws_subnet.us-east-1-subnet-2",
            "aws_vpc.us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-1-subnet-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08473bd1a7a981b70",
            "route_table_id": "rtb-07c9c4ed12d42c96b",
            "subnet_id": "subnet-0abc3ec32314d1f41"
          },
          "dependencies": [
            "aws_route_table.us-west-1-route-table",
            "aws_subnet.us-west-1-subnet-1",
            "aws_vpc.us-west-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-1-subnet-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc2ef70151fc7795",
            "route_table_id": "rtb-07c9c4ed12d42c96b",
            "subnet_id": "subnet-0d7c68ad12d2a648b"
          },
          "dependencies": [
            "aws_route_table.us-west-1-route-table",
            "aws_subnet.us-west-1-subnet-2",
            "aws_vpc.us-west-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "us-east-1-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349761350494:security-group/sg-0c4cb030408e58dd3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4cb030408e58dd3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231118005438355900000001",
            "name_prefix": "terraform-",
            "owner_id": "349761350494",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance-east-security-group"
            },
            "tags_all": {
              "Name": "instance-east-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-065dddfbb64588639"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "us-west-1-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:349761350494:security-group/sg-0c50bd6752e97a00b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c50bd6752e97a00b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231118005439030200000001",
            "name_prefix": "terraform-",
            "owner_id": "349761350494",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance-west-security-group"
            },
            "tags_all": {
              "Name": "instance-west-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-087c627d211c1faf6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.us-west-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-1-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349761350494:subnet/subnet-0b8fd542ac3ac99f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8fd542ac3ac99f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349761350494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-065dddfbb64588639"
          },
          "dependencies": [
            "aws_vpc.us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-1-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349761350494:subnet/subnet-0a5006434f12ab81a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5006434f12ab81a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349761350494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-065dddfbb64588639"
          },
          "dependencies": [
            "aws_vpc.us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-1-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:349761350494:subnet/subnet-0abc3ec32314d1f41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abc3ec32314d1f41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349761350494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-087c627d211c1faf6"
          },
          "dependencies": [
            "aws_vpc.us-west-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-1-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:349761350494:subnet/subnet-0d7c68ad12d2a648b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7c68ad12d2a648b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349761350494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-087c627d211c1faf6"
          },
          "dependencies": [
            "aws_vpc.us-west-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "us-east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349761350494:vpc/vpc-065dddfbb64588639",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a7603e25f1233cef",
            "default_route_table_id": "rtb-08ce8d4dfff1f1f86",
            "default_security_group_id": "sg-0986bd00c792c02f6",
            "dhcp_options_id": "dopt-6e030515",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065dddfbb64588639",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ce8d4dfff1f1f86",
            "owner_id": "349761350494"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "us-west-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:349761350494:vpc/vpc-087c627d211c1faf6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a625ac6d1577cf74",
            "default_route_table_id": "rtb-01f025a6d0914dec0",
            "default_security_group_id": "sg-05043c20973654d7d",
            "dhcp_options_id": "dopt-1adbfc7d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-087c627d211c1faf6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f025a6d0914dec0",
            "owner_id": "349761350494"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "auto_accept": false,
            "id": "pcx-07c02e0bfd18ccdb9",
            "peer_owner_id": "349761350494",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-065dddfbb64588639",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-087c627d211c1faf6"
          },
          "dependencies": [
            "aws_vpc.us-east-1",
            "aws_vpc.us-west-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peering_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-07c02e0bfd18ccdb9",
            "peer_owner_id": "349761350494",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-065dddfbb64588639",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-087c627d211c1faf6",
            "vpc_peering_connection_id": "pcx-07c02e0bfd18ccdb9"
          },
          "dependencies": [
            "aws_vpc.us-east-1",
            "aws_vpc.us-west-1",
            "aws_vpc_peering_connection.peering_connection"
          ]
        }
      ]
    }
  ]
}